# CalPyCLES

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml
environment/: PYCLES_PATH.txt  compile_pycles_slurm_script.sh  requirements.txt  setup_env_pip_euler.sh
experiments/: data_loaders.py  make_ens.ipynb  make_nature.ipynb  plot_cloud_defs.ipynb  plot_comparison_CDmodification.ipynb  plot_comparisons.ipynb  plot_ensembles.ipynb  plot_matrices.ipynb  plot_stevens05_ensemble.ipynb  run_EnKF_calibration_REAL.ipynb  run_EnKF_calibration_REAL_ZBASE.ipynb  run_EnKF_calibration_SYNTH.ipynb  run_posterior.ipynb  run_variability.ipynb
jenkins/: Jenkinsfile
recipe/: meta.yaml
src/calpycles/: __init__.py  case_inputs.py  enkf_calibration.py  helpers.py  namelist.py  observable.py  parameters.py  pycles_ensemble.py  pycles_sample.py  random_variables.py
src/calpycles/DYCOMS_RF01/: fluxes.py  measurements.py
src/calpycles/DYCOMS_RF01/data/: data.nc
src/calpycles/dapper/: README.txt  linalg.py  matrices.py  randvars.py  seeding.py  stats.py
src/calpycles/namelist_defaults/: DYCOMS_RF01.in  DYCOMS_RF01_test.in
src/calpycles/plotting/: Stevens_2005_LES_ensemble_gcss7.nc  __init__.py  bayes.py  distributions.py  distributions_1d.py  distributions_2d.py  distributions_helpers.py  ens_obs.py  ens_stats_plotter.py  heatmap.py  plot_3d_fields.py  presentation.mplstyle
src/calpycles/slurm/: helpers.py  print_job_array_summary.sh  run_job_in_array.py  runtimes.py
test/: test.ipynb
test/nature_lowres/: DYCOMS_RF01_nature.in  samples_observations.nc
tools/: run-mypy.sh
