[build-system]
requires = [
    "setuptools>=65",
    "wheel>=0.38",
]
build-backend = "setuptools.build_meta"

[project]
name = "calpycles"
version = "0.1.0"
description = "Python functionalities around the Cython-based PyCLES"
readme = "README.md"
keywords = [
    "PyCLES",
    "large-eddy simulation",
    "Cython",
    "finite volumes",
    "sub-grid scale",
    "boundary layer",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"
authors = [
    {name="Dana Grund", email="dgrund@ethz.ch"},
]

[project.urls]
source = "https://github.com/dana-grund/CalPyCLES"
documentation = "None"

[project.scripts]
# Format: <command> = "<package>.<module>:<function>"
# calpycles = "calpycles.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-s",
    "-ra",
    "--pdbcls=IPython.terminal.debugger:TerminalPdb",
	"--tb=short",
    # "--cov=calpycles",
    # "--mypy",
]

[tool.black]

[tool.isort]
default_section = "THIRDPARTY"
profile = "black"
force_single_line = true
# Headings
import_heading_stdlib = "Standard library"
import_heading_thirdparty = "Third-party"
import_heading_firstparty = "First-party"
import_heading_localfolder = "Local"
# Known modules to avoid misclassification
known_standard_library = [
    # Add standard library modules that may be misclassified by isort
]
known_third_party = [
    # Add third-party modules that may be misclassified by isort
]
known_first_party = [
    # Add first-party modules that may be misclassified by isort
    "calpycles",
]

[tool.mypy]
# --strict options (v0.941)
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Note: Only globally ignore missing imports as a matter of last resort!
# See https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
module = [
    # Add external modules w/o type hints here
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
# max-complexity = 10
ignore = [
    "E203", # Allow whitespace before ':' (https://github.com/PyCQA/pycodestyle/issues/373)
    "F811", # Allow redefinition of unused name (necessary for typing.overload)
    "I002", # Don't check for isort configuration
    "W503", # Allow line break before binary operator (PEP 8-compatible)
]
per-file-ignores = [
    "__init__.py: F401",  # Allow unused imports
]

[tool.pylint]
recursive = true
ignore-imports = true
max-line-length = 88
# Tweak valid name formats
# Defaults (http://pylint-messages.wikidot.com/messages:c0103):
#  argument-rgx  = "^[a-z_][a-z0-9_]{2,30}$"
#  attr-rgx      = "^[a-z_][a-z0-9_]{2,30}$"
#  function-rgx  = "^[a-z_][a-z0-9_]{2,30}$"
#  method-rgx    = "^[a-z_][a-z0-9_]{2,30}$"
#  variable-rgx  = "^[a-z_][a-z0-9_]{2,30}$"
#  class-rgx     = "^[A-Z_][a-zA-Z0-9]+$"
#  const-rgx     = "^(([A-Z_][A-Z0-9_]*)|(__.*__))$"
#  module-rgx    = "^(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"
argument-rgx  = "^[a-z_][a-z0-9_]{,40}$"
attr-rgx      = "^[a-z_][a-z0-9_]{,40}$"
function-rgx  = "^[a-z_][a-z0-9_]{,40}$"
method-rgx    = "^[a-z_][a-z0-9_]{,40}$"
variable-rgx  = "^[a-z_][a-z0-9_]{,40}$"
class-rgx     = "^[A-Z_][a-zA-Z0-9]+(_T)?$"
const-rgx     = "^(([a-z_][a-z0-9_]*)|([A-Z_][A-Z0-9_]*)|(__[a-zA-Z0-9]+__))$"
module-rgx    = "^(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"
inlinevar-rgx = "^[A-Za-z_][A-Za-z0-9_]*$"
# Disable selected warnings, errors etc. that conflict with style guide etc.
# Note: To locally ignore certain errors, use "pylint: disable=XXXX" comments instead!
disable = [
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring (also applies to methods)
    # "C0103", # invalid-name
    "E1101",  # no-member
    "R0903", # too-few-public-methods (>2)
    # "R0801", # duplicate-code (similar lines in 2 files)
    # -> see https://github.com/PyCQA/pylint/issues/214
    "R1705", # no-else-return (unnecessary "elif" after "return")
    "R1720", # no-else-raise (unnecessary "elif" after "raise")
    "R1724", # no-else-continue (unnecessary "elif" after "continue")
    "W0511", # fixme (TODOs)
    "W1116", # isinstance-second-argument-not-valid-type
]
# Ignore (sub-)modules that trigger errors like E1101 (no-member) or E0611 (no-name-in-module)
ignored-modules = []

[tool.pydocstyle]
# All codes: http://www.pydocstyle.org/en/stable/error_codes.html
ignore = [
    # "D100", # Missing docstring in public module
    # "D101", # Missing docstring in public class
    # "D102", # Missing docstring in public method
    # "D103", # Missing docstring in public function
    # "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    # "D105", # Missing docstring in public nested class
    # "D107", # Missing docstring in __init__
    "D203", # Blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    # "D405", # Section name should be properly capitalized
    # "D406", # Section name should end with a newline
    "D407", # Missing dashed underline after section
]

[tool.rstcheck]
ignore_directives = [
    "automodule",
    "mdinclude",
]

[tool.codespell]
ignore-regex = '(\b[A-Z]+\b|.*([#!"]|<!--) *codespell-ignore\b|^ *"image/[a-z]+": ".*",$)'
# - Ignore all-uppercase words (acronyms)
# - Ignore lines with codespell-ignore comment
# - Ignore lines "image/...": "..." (images in *.ipynb files)
ignore-words = './codespell_ignored_words.txt'
# Note: To skip local files by their full path, codespell (v2.2.2) requires
# './src/...` when called from the command line but 'src/...' when called via
# pre-commit (as local hook); '*src/...` matches both
skip = """\
.git,\
*.codespell-ignore.*,\
./requirements/*,\
"""
